raw/html5ever-2016-08-25--2016-11-11-04-24-18--0.log
commit 280362a02df97670dd08ed19557c81b504b395c3
Merge: 3ac9ec7 12f0b6f
Author: bors <bors@rust-lang.org>
Date:   Thu Nov 10 23:44:44 2016 -0800

    Auto merge of #36615 - sinkuu:e0243_0244, r=nrc
    
    Make E0243/E0244 message consistent with E0107
    
    E0243/E0233 prints `expected {}, found {}` on the span note, while E0107 prints it on the first line. This is confusing when both error occur simultaneously.
    
    This PR makes E0243/E0233 print `expected {}, found {}` on the first line.
    
    Code:
    
    ``` rust
    struct Foo<'a, 'b> {
        s: &'a str,
        t: &'b str,
    }
    
    type Bar<T, U> = Foo<T, U>;
    ```
    
    rustc output (before):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments
     --> test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments, found 2
    ```
    
    rustc output (after):
    
    ```
    error[E0107]: wrong number of lifetime parameters: expected 2, found 0
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected 2 lifetime parameters
    
    error[E0244]: wrong number of type arguments: expected 0, found 2
     --> /tmp/test.rs:6:18
      |
    6 | type Bar<T, U> = Foo<T, U>;
      |                  ^^^^^^^^^ expected no type arguments
    ```
rustc: ./html5ever-2016-08-25
cargo rustc  -- -Ztime-passes -Zinput-stats
   Compiling mac v0.0.2
   Compiling void v1.0.2
   Compiling log v0.3.6
   Compiling rustc-serialize v0.3.19
   Compiling serde v0.8.9
   Compiling encoding_index_tests v0.1.4
   Compiling matches v0.1.2
   Compiling phf_shared v0.7.16
   Compiling libc v0.2.16
   Compiling lazy_static v0.2.1
   Compiling unreachable v0.1.1
   Compiling encoding-index-singlebyte v1.20141219.5
   Compiling encoding-index-tradchinese v1.20141219.5
   Compiling debug_unreachable v0.1.1
   Compiling futf v0.1.2
   Compiling encoding-index-simpchinese v1.20141219.5
   Compiling phf v0.7.16
   Compiling utf-8 v0.6.0
   Compiling encoding-index-japanese v1.20141219.5
   Compiling encoding-index-korean v1.20141219.5
   Compiling rand v0.3.14
   Compiling encoding v0.2.33
   Compiling tendril v0.2.3
   Compiling phf_generator v0.7.16
   Compiling phf_codegen v0.7.16
   Compiling string_cache v0.2.29
   Compiling html5ever v0.5.4 (file:///root/benchmarks/html5ever-2016-08-25)
time: 0.023; rss: 48MB	parsing
Lines of code:             8210
Pre-expansion node count:  52140
time: 0.000; rss: 48MB	recursion limit
time: 0.000; rss: 48MB	crate injection
time: 0.000; rss: 48MB	plugin loading
time: 0.000; rss: 48MB	plugin registration
time: 0.691; rss: 102MB	expansion
time: 0.000; rss: 102MB	maybe building test harness
time: 0.002; rss: 102MB	maybe creating a macro crate
Post-expansion node count: 163412
time: 0.000; rss: 102MB	checking for inline asm in case the target doesn't support it
time: 0.003; rss: 102MB	complete gated feature checking
time: 0.008; rss: 102MB	early lint checks
time: 0.002; rss: 102MB	AST validation
time: 0.016; rss: 104MB	name resolution
time: 0.012; rss: 113MB	lowering ast -> hir
time: 0.003; rss: 118MB	indexing hir
time: 0.002; rss: 118MB	attribute checking
time: 0.001; rss: 97MB	language item collection
time: 0.002; rss: 97MB	lifetime resolution
time: 0.000; rss: 97MB	looking for entry point
time: 0.000; rss: 97MB	looking for plugin registrar
time: 0.011; rss: 106MB	region resolution
time: 0.001; rss: 106MB	loop checking
time: 0.001; rss: 106MB	static item recursion checking
time: 0.020; rss: 107MB	compute_incremental_hashes_map
time: 0.000; rss: 107MB	load_dep_graph
time: 0.008; rss: 108MB	type collecting
time: 0.000; rss: 108MB	variance inference
time: 0.011; rss: 110MB	coherence checking
time: 0.020; rss: 111MB	wf checking
time: 0.284; rss: 122MB	item-types checking
time: 0.423; rss: 129MB	item-bodies checking
time: 0.000; rss: 129MB	drop-impl checking
time: 0.060; rss: 135MB	const checking
time: 0.006; rss: 135MB	privacy checking
time: 0.001; rss: 135MB	stability index
time: 0.002; rss: 135MB	intrinsic checking
time: 0.002; rss: 135MB	effect checking
time: 0.014; rss: 135MB	match checking
time: 0.011; rss: 130MB	liveness checking
time: 0.021; rss: 130MB	rvalue checking
time: 0.110; rss: 176MB	MIR dump
  time: 0.008; rss: 176MB	SimplifyCfg
  time: 0.014; rss: 178MB	QualifyAndPromoteConstants
  time: 0.020; rss: 178MB	TypeckMir
  time: 0.000; rss: 178MB	SimplifyBranches
  time: 0.004; rss: 178MB	SimplifyCfg
time: 0.046; rss: 178MB	MIR cleanup and validation
time: 0.078; rss: 180MB	borrow checking
time: 0.002; rss: 180MB	reachability checking
time: 0.005; rss: 180MB	death checking
time: 0.006; rss: 180MB	stability checking
time: 0.000; rss: 180MB	unused lib feature checking
time: 0.056; rss: 180MB	lint checking
time: 0.000; rss: 180MB	resolving dependency formats
  time: 0.000; rss: 180MB	NoLandingPads
  time: 0.004; rss: 180MB	SimplifyCfg
  time: 0.009; rss: 180MB	EraseRegions
  time: 0.001; rss: 180MB	AddCallGuards
  time: 0.073; rss: 185MB	ElaborateDrops
  time: 0.000; rss: 185MB	NoLandingPads
  time: 0.007; rss: 181MB	SimplifyCfg
  time: 0.007; rss: 179MB	InstCombine
  time: 0.001; rss: 179MB	Deaggregator
  time: 0.000; rss: 179MB	CopyPropagation
  time: 0.007; rss: 177MB	SimplifyLocals
  time: 0.001; rss: 177MB	AddCallGuards
  time: 0.000; rss: 177MB	PreTrans
time: 0.110; rss: 177MB	MIR optimisations
  time: 0.011; rss: 178MB	write metadata
  time: 0.041; rss: 180MB	translation item collection
  time: 0.005; rss: 180MB	codegen unit partitioning
  time: 0.005; rss: 194MB	internalize symbols
time: 0.272; rss: 194MB	translation
time: 0.000; rss: 194MB	assert dep graph
time: 0.000; rss: 194MB	serialize dep graph
  time: 0.021; rss: 104MB	llvm function passes [0]
  time: 0.012; rss: 105MB	llvm module passes [0]
  time: 0.469; rss: 109MB	codegen passes [0]
  time: 0.000; rss: 109MB	codegen passes [0]
time: 0.542; rss: 109MB	LLVM passes
time: 0.000; rss: 109MB	serialize work products
time: 0.024; rss: 92MB	linking
done
